--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="keywords" content="">
     <meta name="description" content="">
-    <title>Landing</title>
+    <title>Identiqo Consulting</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
 <link rel="stylesheet" href="index.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
@@ -24,12 +24,12 @@
 		"url": "/"
 }</script>
     <meta name="theme-color" content="#478ac9">
-    <meta property="og:title" content="Landing">
+    <meta property="og:title" content="Identiqo Consulting">
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
     <link rel="canonical" href="/">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
-  <body data-home-page="https://website6488447.nicepage.io/Landing.html?version=6307c442-68b4-99d0-9659-b39ac90cbe92" data-home-page-title="Landing" data-path-to-root="./" data-include-products="false" class="u-body u-xl-mode" data-lang="en">
+  <body data-home-page="https://website6488447.nicepage.io/Identiqo-Consulting.html?version=c4439459-4e6c-83b3-cd62-2a87b27bf266" data-home-page-title="Identiqo Consulting" data-path-to-root="./" data-include-products="false" class="u-body u-xl-mode" data-lang="en">
     <section class="u-clearfix u-container-align-center u-custom-color-5 u-section-1" id="block-1">
       <div class="u-clearfix u-sheet u-valign-bottom-lg u-valign-bottom-md u-valign-middle-xs u-sheet-1">
         <img class="u-expanded-width-sm u-expanded-width-xs u-image u-image-contain u-image-default u-image-1" src="images/zkxnxfj8.png" alt="" data-image-width="1020" data-image-height="311">
